# rattler

./: Cargo.toml
.github/workflows/: build-rattler-binary.yml  rust-compile.yml
crates/libsolv_rs/: Cargo.toml
crates/libsolv_rs/src/: decision_map.rs  lib.rs  pool.rs  rules.rs  solvable.rs  solve_jobs.rs  solver.rs  watch_map.rs
crates/rattler-bin/: Cargo.toml
crates/rattler-bin/src/: main.rs
crates/rattler-bin/src/commands/: create.rs  mod.rs  run.rs
crates/rattler/src/: package_cache.rs
crates/rattler/src/install/: clobber_registry.rs  link.rs  mod.rs  python.rs
crates/rattler_cache/src/package_cache/: cache_lock.rs  mod.rs
crates/rattler_conda_types/src/: lib.rs
crates/rattler_conda_types/src/repo_data/: mod.rs  patches.rs
crates/rattler_config/src/: config.rs
crates/rattler_index/: Cargo.toml
crates/rattler_index/src/: lib.rs
crates/rattler_libsolv_rs/src/: mapping.rs  pool.rs
crates/rattler_libsolv_rs/src/solver/: clause.rs  decision.rs  decision_map.rs  mod.rs
crates/rattler_shell/: Cargo.toml
crates/rattler_shell/src/: activation.rs  lib.rs  native_path.rs
crates/rattler_shell/src/shell/: mod.rs
crates/rattler_solve/: Cargo.toml
crates/rattler_solve/src/: lib.rs
crates/rattler_solve/src/libsolv/: input.rs  mod.rs  output.rs
crates/rattler_solve/src/libsolv/wrapper/: pool.rs  solver.rs
crates/rattler_solve/src/libsolv_c/: mod.rs
crates/rattler_solve/src/libsolv_c/wrapper/: repo.rs
crates/rattler_solve/src/resolvo/: conda_sorting.rs  mod.rs
crates/rattler_solve/tests/: backends.rs
(+10 files in other folders)
