[package]
name = "rattler_solve"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "A crate to solve conda environments"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rattler_conda_types = { version = "0.2.0", path = "../rattler_conda_types" }
rattler_digest = { version = "0.2.0", path = "../rattler_digest" }
libsolv_rs = { path = "../libsolv_rs" }
hex = "0.4.3"
tempfile = "3.6.0"
cfg-if = "1.0.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
rstest = "0.17.0"
serde_json = "1.0.96"
url = "2.4.0"
